--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="com.example.inventory_app">
 
     <!-- Разрешение на использование камеры (если сканер через камеру) -->
-<!--    <uses-permission android:name="android.permission.CAMERA" />-->
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
             android:icon="@drawable/ic_launcher"
@@ -32,7 +32,7 @@
                   android:exported="false">
             <intent-filter>
                 <!-- Здесь должен быть action, который отправляет сканер -->
-                <action android:name="com.android.SCAN" />
+                <action android:name="com.android.SCAN" /> <!-- Используйте правильный action -->
             </intent-filter>
         </receiver>
 
