--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,11 +59,18 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
-        implementation 'com.google.code.gson:gson:2.8.9'
-        implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-        implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-        implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+
 
     implementation 'com.google.android.material:material:1.6.0'
+
+    implementation 'org.threeten:threetenbp:1.5.1'
+
+
+
+
 
 }
