--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-            android:icon="@drawable/ic_launcher"
+            android:icon="@drawable/ic_launcher1"
             android:roundIcon="@drawable/ic_launcher_round"
             android:allowBackup="true"
             android:label="@string/app_name"
