--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 
     implementation 'org.threeten:threetenbp:1.5.1'
 
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+
 
 
 
