--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         </activity>
 
         <activity
-                android:name=".InventoryActivity"
+                android:name=".InventoryActivityTest"
                 android:exported="false"/>
 
         <activity
